# Python_Web_9

./: .gitignore
HW_10_Django/: pyproject.toml
HW_10_Django/hw_project/hw_project/: settings.py  urls.py
HW_10_Django/hw_project/useful_quotes/: apps.py  models.py  urls.py  utils.py  views.py
HW_10_Django/hw_project/useful_quotes/migrations/: 0001_initial.py
HW_10_Django/hw_project/useful_quotes/static/useful_quotes/: styles.css
HW_10_Django/hw_project/useful_quotes/templates/useful_quotes/: author.html  base.html  index.html  new_author.html  new_quote.html
HW_10_Django/hw_project/useful_quotes/templatetags/: extract.py
HW_10_Django/hw_project/users/: forms.py  urls.py  views.py
HW_10_Django/hw_project/users/templates/users/: logout.html  signin.html  signup.html
HW_10_Django/hw_project/utils/: add_quotes_to_mongo.py  authors.json  migrate_to_postgres_from_mongo.py
HW_10_Django/hw_quotes/: db.sqlite3
HW_10_Django/hw_quotes/hw_quotes/: settings.py  urls.py
HW_10_Django/hw_quotes/quotes/: get_db.py  views.py
HW_10_Django/hw_quotes/quotes/static/quotes/: styles.css
HW_10_Django/hw_quotes/quotes/templates/quotes/: base.html  index.html
HW_10_Django/hw_quotes/quotes/templatetags/: extract.py
HW_10_Django/hw_quotes/users/: urls.py
HW_10_Django/hw_quotes/utils/: add_quotes_to_mongo.py
HW_1_Console_bot_with_abstract/: classes.py  console_func.py  main.py  user_interface.py
HW_2_Console_bot_with_docker/: Dockerfile  classes.py  main.py  pyproject.toml  requirements.txt  user_interface.py
HW_3_Sorting_with_threads/: factorize.py  mainHW3.py  normalize.py
HW_4_Web/: main.py
HW_4_Web/front-init/storage/: data.json
HW_5_Asynchronous/: main.py
HW_5_Asynchronous/web_chat/: functions.py  main.css  server.py
HW_6_SQL/: creating_university_tables.sql  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds_university.py  university.db
HW_7_ORM_SQLAIchemy/: config.ini  my_select.py  pyproject.toml  seed_table.py
HW_7_ORM_SQLAIchemy/migrations/versions/: dc2aa125bae9_init.py
HW_8_Mongo_DB/: main.py  models.py  pyproject.toml  seed_data.py
HW_9_BS_Scrapy/: authors.json  main_soup.py  pyproject.toml  soup_with_threading.py
