[tool.poetry]
name = "hw-10-django"
version = "0.1.0"
description = ""
authors = ["Nikita Sherstianykh <n.sherstianykh@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_10_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
pymongo = "^4.4.1"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
