[tool.poetry]
name = "hw-7-orm-sqlaichemy"
version = "0.1.0"
description = ""
authors = ["Nikita Sherstianykh <n.sherstianykh@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_7_orm_sqlaichemy"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.9"
faker = "^18.4.0"
alembic = "^1.10.3"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
